# qorsense_v3

./: .coverage  .env.example  .gitignore  README.md  architecture_review.md  coverage.xml  debug_endpoint.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run_next.sh  test_upload.csv
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  alembic.ini  database.py  debug_env.py  main.py  models.py  models_db.py  report_gen.py
backend/alembic/: env.py
backend/alembic/versions/: e18689250622_initial_migration.py
backend/api/: deps.py
backend/api/routes/: analytics.py  auth.py  health.py  monitoring.py  reports.py  sensors.py  synthetic.py  tasks.py
backend/core/: __init__.py  cache.py  celery_app.py  config.py  exceptions.py  metrics.py  security.py
backend/middleware/: logging.py  rate_limit.py  security.py
backend/repositories/: __init__.py  base.py
backend/schemas/: __init__.py  common.py  sensor.py
backend/tasks/: __init__.py  analysis_tasks.py
backend/tests/: conftest.py  test_api_analytics.py  test_api_health.py  test_api_sensors.py  test_metrics.py
frontend-next/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend-next/app/: globals.css  page.tsx
frontend-next/app/data-sources/: page.tsx
frontend-next/app/sensor-analysis/: page.tsx
frontend-next/app/sensor/[id]/: page.tsx
frontend-next/app/settings/: page.tsx
frontend-next/app/simulation/: page.tsx
frontend-next/components/: Sidebar.tsx  SmartSensorCard.tsx
frontend-next/components/simulation/: AnalysisResultsPanel.tsx  InteractiveAnalysisChart.tsx  SimulationControls.tsx
frontend-next/hooks/: index.ts  useApi.ts
frontend-next/lib/: api-client.ts  api.ts
frontend-next/types/: api.ts  index.ts
tests/: test_report.py
